--- a/www/map.html
+++ b/www/map.html
@@ -7,7 +7,12 @@
 		<script src="map.js"></script>
 	</head>
 <body>
-	<div id="map" style="">
+	<div id="mapcontainer">
+		<div id="info">
+			Position: <code id='mousemove'></code>
+		</div>
+		<div id="map">
+		</div>
 	</div>
 </body>
 </html>
