map.html: Add tab title

--- a/www/map.html
+++ b/www/map.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>Leaftest Minetest Map</title>
 		<link rel="stylesheet" href="leaflet.css" />
 		<link rel="stylesheet" href="leaflet-custom.css" />
 		<script src="leaflet.js"></script>
